updated errors with build

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -67,6 +67,10 @@ body {
     width: 100% !important;
 }
 
+.uploadPage {
+    padding: 50px;
+}
+
 /******************* Main Section CSS *********/
 
 #mainSection {
